--- a/Site1.Master
+++ b/Site1.Master
@@ -1,52 +1,54 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="TasksManegar.Site1" %>
 
 <!DOCTYPE html>
-
 <html>
 <head runat="server">
-    <title></title>
-            <!--  the bootstarp css file -->    
+    <title>Task Manager</title>
+    <!--  the bootstarp css file -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-        <!--  the bootstarp js file -->
-           <!--<script src="bootstrap/js/bootstrap.min.js"></script> -->
-   <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-
-        <!-- the fontawesome css file -->
+    <!-- the fontawesome css file -->
     <link href="fontawesome/css/all.css" rel="stylesheet" />
-    
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
 
-
-            <div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-item nav-link active" href="#">Home <span class="visually-hidden">(current)</span></a>
-                            <a class="nav-item nav-link" href="#">Features</a>
-                            <a class="nav-item nav-link" href="#">Pricing</a>
-                            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </div>
+        <!-- Navbar -->
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <img src="imgs/TaskLogo.png" alt="logo" width="40">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="#">Home</a>
+                        <a class="nav-item nav-link" href="#">Features</a>
+                        <a class="nav-item nav-link" href="#">Pricing</a>
+                        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </div>
-                </nav>
-            </div>
+                </div>
+            </nav>
+        </div>
 
-
-
+        <!-- Content -->
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
-    </form>
 
- 
+        <!-- Modal Script -->
+        <script type="text/javascript">
+            function showModal(message) {
+                document.getElementById('modalMessage').innerText = message;
+                $('#exampleModal').modal('show');
+            }
+        </script>
+        <script src="bootstrap/js/bootstrap.bundle.js"></script>
+    </form>
 </body>
 </html>
