Connect Backend With Frontend

--- a/Site1.Master
+++ b/Site1.Master
@@ -49,16 +49,16 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <img src="imgs/TaskLogo.png" alt="logo" width="40">
-                <a class="navbar-brand" href="#">Torund</a>
+                <a class="navbar-brand" href="Home.aspx">Torund</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">Home</a>
-                        <a class="nav-item nav-link" href="#">About</a>
-                        <a class="nav-item nav-link" href="#">Sgin up</a>
-                        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
+                        <a class="nav-item nav-link active" href="Home.aspx">Home</a>
+                        <a class="nav-item nav-link" href=" Home.aspx#About">About</a>
+                        <a class="nav-item nav-link" href="CreateAccountPage.aspx">Sgin up</a>
+                        <a class="nav-item nav-link" href="LoginPage.aspx" tabindex="-1">Login</a>
                     </div>
                 </div>
             </nav>
